syntax = "proto3";

package sh.coherentopensource.blockchain.base;
option go_package = "github.com/coherentopensource/evm-etl/protos/go/chains/base";

message Data {
  Block block = 1;
  repeated TransactionReceipt transaction_receipts = 2;
  repeated CallTrace call_traces = 3;
}

message Block {
  string number = 1; // hex string
  string base_fee_per_gas = 2;
  string hash = 3;
  string parent_hash = 4;
  string nonce = 5;
  string sha3_uncles = 6;
  string logs_bloom = 7;
  string transactions_root = 8;
  string state_root = 9;
  string receipts_root = 10;
  string miner = 11;
  string difficulty = 12; // hex string
  string total_difficulty = 13; // hex string
  string extra_data = 14;
  string size = 15; // hex string
  string gas_limit = 16; // hex string
  string gas_used = 17; // hex string
  string timestamp = 18; // hex string
  repeated Transaction transactions = 19;
  repeated string uncles = 20;

  // extra fields from alchemy and quicknode
  string mix_hash = 21;
}

message Transaction {
  string block_hash = 1; // hex string
  string block_number = 2; // hex string
  string from = 3;
  string gas = 4; // hex string
  string gas_price = 5; // hex string
  string hash = 6;
  string input = 7;
  string nonce = 8; // hex string
  string to = 9;
  string transaction_index = 10; // hex string
  string value = 11; // hex string
  string type = 12;
  string v = 13;
  string r = 14;
  string s = 15;
  string source_hash = 16;
  string mint = 17;
  bool is_system_tx = 18;
}

message TransactionReceipt {
  string transaction_hash = 1;
  string transaction_index = 2; // hex string
  string block_hash = 3;
  string block_number = 4; // hex string
  string from = 5;
  string to = 6;
  string cumulative_gas_used = 7; // hex string
  string effective_gas_price = 8; // hex string
  string gas_used = 9; // hex string
  string contract_address = 10;
  repeated Log logs = 11;
  string logs_bloom = 12;
  string status = 13; // hex string
  string l1_fee = 14;
  string l1_fee_scalar = 15;
  string l1_gas_price = 16;
  string l1_gas_used = 17;
  string type = 18;
}

message Log {
  bool removed = 1;
  string log_index = 2; // hex string
  string transaction_index = 3; // hex string
  string transaction_hash = 4;
  string block_number = 5; // hex string
  string block_hash = 6;
  string address = 7;
  string data = 8;
  repeated string topics = 9;
}

// quicknode structure
message CallTrace {
  string type = 1;
  string from = 2;
  string to = 3;
  string value = 4; // hex string
  string gas = 5; // hex string
  string gas_used = 6; // hex string
  string input = 7;
  string output = 8;
  string error = 9;
  string revert_reason = 10;
  repeated CallTrace calls = 11;
}
